# agnosticd

./: .ansible-navigator.yml  .bash_history  .gitignore  .gitlab-ci.yaml  .travis.yml  .yamllint  CODEOWNERS  CONTRIBUTING.md  Makefile  Overview.adoc  PULL_REQUEST_TEMPLATE.md  Preparing_your_workstation.adoc  README.adoc  STORIES.adoc  ansible-navigator.yaml  ansible-navigator.yml  ansible.cfg  bigfile  deploy_starburst.sh  destroy.yml  example_secret_vars.yml  execute.sh  git-update.sh  gpte-hosts  htpasswd  index.html  judd  lindsey  login.html  main.yml  my  my_infoblox_lab.yml  provision.yml  pruner.yaml  readme.adoc  requirements.txt  setup.py  sonar-project.properties  start.yml  status.yml  (+7 more)
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
ansible/: 1.json  2.json  a  add_host.yml  ansible.cfg  completion_callback.yml  deploy_ocp_ha.sh  deploy_workshop.sh  destroy.yml  destroy_workshop.sh  execute.sh  export_inventory.yml  gpte-hosts  hostvars.json  include_vars.yml  main.yaml  (+35 more)
ansible/roles/ansible-role-shade/: .gitignore  .gitreview  README.rst  bindep.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ansible/roles/ansible-role-shade/defaults/: main.yaml
ansible/roles/ansible-role-shade/doc/source/: conf.py
ansible/roles/ansible-role-shade/meta/: main.yml
ansible/roles/ansible-role-shade/tasks/: install.yaml  main.yaml
ansible/roles/ansible-role-shade/tasks/install/: git.yaml  pip.yaml
ansible/roles/ansible-role-shade/tests/: inventory  test.yaml
ansible/roles/ansible-role-shade/vars/: Debian.yaml  RedHat.yaml
(+16011 files in other folders)
