[metadata]
name = ansible-role-shade
summary = Ansible role to manage Shade
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[wheel]
universal = 1
